# isaaclab-desktop-organizer

./: .gitignore  MANIFEST.in  PROJECT_SUMMARY.md  README.md  pyproject.toml  setup.py
assets/scenes/Collected_table_clean/: .collect.mapping.json  table_clean.usd
assets/scenes/Collected_table_clean/SubUSDs/: Robotiq_2F_85_base.usda  Robotiq_2F_85_edit.usd  cables_connected.usd  cream_cheese.usd  default_environment.usd  franka.usd  franka_Gripper_Robotiq_2F_85.usd  instanceable_collision_meshes.usd  ketchup.usd  living_room_table.usd  logo_decals.usd  milk.usd  orange_juice.usd  panda_hand.usd  panda_hand_1.usd  panda_instanceable.usd  panda_leftfinger.usd  panda_leftfinger_1.usd  panda_leftfinger_flex.usd  (+27 more)
desktop_organizer/: __init__.py
desktop_organizer/assets/: __init__.py
desktop_organizer/config/: __init__.py  ppo_cfg.py
desktop_organizer/config/mimic/: generate_config.json
desktop_organizer/config/robomimic/: bc.json
desktop_organizer/envs/: __init__.py  mimic_env.py  mimic_env_cfg.py  rl_env_cfg.py
desktop_organizer/mdp/: __init__.py  rewards.py
docs/: TECHNICAL_DETAILS.md  installation.md  mimic_data_generation.md  usage_guide.md
scripts/: README.md  generate_dataset.py  play_rl.py  record_demos.py  train_bc.py  train_rl.py
scripts/bc/: add_mask.py  annotate_demos.py  play_bc.py  replay_demos.py  train_bc.py
scripts/rl/: play_rl.py  train_rl.py
tests/: BUG_FIX_SUMMARY_2026-01-27.md  EXTERNAL_PACKAGE_FIXES.md  EXTERNAL_PACKAGE_SCRIPTS_GUIDE.md  EXTERNAL_PACKAGE_SCRIPTS_SUMMARY.md  IMPORTANT_FIX.md  QUICK_SUMMARY.md  README.md  SCRIPTS_ALIGNMENT_COMPLETE.md  SCRIPTS_COMPARISON_ANALYSIS.md  SOLUTION_SUMMARY.md  TEST_SUMMARY.md  TRAIN_RL_MODEL_OVERWRITE_FIX.md  quick_test.sh  test_1_import.py  test_2_gym_registration.py  test_3_FINAL.py  test_3_rl_complete.py  test_3_rl_env_create.py  test_3_rl_env_create_final.py  test_3_rl_env_create_fixed.py  test_4_FINAL.py  test_4_mimic_env_create.py  test_4_mimic_env_create_fixed.py  test_5_assets.py  test_debug_isaac_sim.py  test_package.py
(+32 files in other folders)
